--- a/includes.tex
+++ b/includes.tex
@@ -15,6 +15,7 @@
 \usepackage{array} % to allow vertical alignment in tables
 \usepackage{makecell} % allows multi-line tables
 \usepackage{enumitem} % better enumeration
+\usepackage{subcaption}
 
 \usepackage{graphicx}
 \usepackage{textcomp}
