--- a/intro.tex
+++ b/intro.tex
@@ -21,7 +21,7 @@ Common methods used to diagnose secondary TBI in clinical settings rely on quali
 
 Early diagnosis is crucial for the best recovery, and to do so, there is a need to continuously monitor the patient and receive quantitative data in real time for accurate diagnosis. The Boutelle Research Group have been looking into utilising brain signals that are associated with TBI. From the primary injury site, spreading depolarisation (SD) waves propagate into surrounding brain tissue and cause secondary damage. The cells in the injury sites have a high energy demand in order to repolarise the membrane potential, hence the glucose concentration in the extracellular fluid transiently decreases by approximately 18-93$\mu M$. The cells tend to undergo anaerobic respiration during this period, so the extracellular lactate concentration transiently increase by 5-100$\mu M$ \cite{D.2010}. Glucose and lactate have been declared by the International Microdialysis Collaborative Group as the most clinically useful signals for the prognosis of TBI \cite{Hutchinson2015} so these transient changes are useful to monitor. Furthermore, during the same transient period, the potassium ion concentration increases \cite{Rogers:2011:10.1039/c0cp02810j} due to the cells depolarising.
 
-The research group have developed a novel monitoring system, a continuous online microdialysis (coMD), to monitor SD occurrence and the neurochemical changes that occur with excellent temporal resolution. A miniaturised microdialysis probe is inserted on the surface of the brain and is perfused with sterile artificial cerebrospinal fluid (aCSF). The microdialysite then perfuses through a microfluidic chip that that houses the three sensors that detect the glucose, potassium and lactate concentrations in the brain. This set up has allowed for online microdialysis monitoring and the transient changes in glucose, lactate and potassium to be accurately measured \cite{Rogers2017} as shown in Figure~\ref{fig: SD}.
+The research group have developed a novel monitoring system, a continuous online microdialysis (coMD), to monitor SD occurrence and the neurochemical changes that occur with excellent temporal resolution. A miniaturised microdialysis probe is inserted on the surface of the brain and is perfused with sterile artificial cerebrospinal fluid (aCSF). The microdialysite then perfuses through a microfluidic chip that houses the three sensors that detect the glucose, potassium and lactate concentrations in the brain. This set up has allowed for online microdialysis monitoring and the transient changes in glucose, lactate and potassium to be accurately measured \cite{Rogers2017} as shown in Figure~\ref{fig: SD}.
 
 \begin{figure}[t]
 \centering
@@ -31,9 +31,9 @@ The research group have developed a novel monitoring system, a continuous online
 \label{fig: SD}
 \end{figure}
 
-To collect data from the patient, the microfluidic analysis system had to be placed behind the patient's bed on a trolley. The sensors were then wired into Powerlab, a data acquisition hardware, which was then wired to a computer so that the measurements from the sensors could be viewed in real time on PowerLab Pro \cite{Rogers2017}. This setup that the patient is attached to is very bulky and the wired system poses limitations such as restriction on the patient's movement otherwise the wires may break of disconnect, and the wires may introduce noise \cite{Ferguson2011}. A more desirable system is one that is miniaturised and allows for wireless transmission of data.
+To collect data from the patient, the microfluidic analysis system had to be placed behind the patient's bed on a trolley. The sensors were then wired into Powerlab, a data acquisition hardware, which was then wired to a computer so that the measurements from the sensors could be viewed in real time on PowerLab Pro \cite{Rogers2017}. This setup that the patient is attached to is very bulky and the wired system poses limitations such as restriction on the patient's movement, the wires may break of disconnect, and the wires may introduce noise \cite{Ferguson2011}. A more desirable system is one that is miniaturised and instead allows for wireless transmission of data.
 
-The research group have developed the LENBIC, and ASIC (application specific integrated chip) which miniaturises the circuitry required for measurements. The ASIC can measure these three neurochemical signals of interest using the coMD system and contains amperometric channels which glucose and lactate oxidase-based biosensors connect to, and potentiometric channels which connect to the potassium ion-sensing membrane sensors \cite{Pagkalos2017, Rogers2017}. However, the LENBIC is also a wired system. 
+The research group have developed the LENBIC, and ASIC (application specific integrated chip) which miniaturises the circuitry required for measurements. The ASIC can measure these three neurochemical signals of interest using the coMD system and contains amperometric channels which the glucose and lactate oxidase-based biosensors connect to, and potentiometric channels which connect to the potassium ion-sensing membrane sensors \cite{Pagkalos2017, Rogers2017}. However, the LENBIC is also a wired system. 
 
 This project aims to develop a wireless communication system between the coMD system and an iOS application. Information from the three electrochemical sensors will be received simultaneously in an iPad application in real time to allow for continuous monitoring of the patient. The app must be user friendly and be of high quality as it aims to be used by a clinician to monitor the state of the patient. It is desirable for the app to contain features that allows for easy use and easy readability of the data presented. It is important that the signals are transmitted and displayed accurately so suitable processing methods need to be implemented. 
 
