--- a/report.tex
+++ b/report.tex
@@ -29,6 +29,8 @@
 \section{Discussion}
 \input{discussion.tex}
 
+\section{Conclusion}
+
 
 \section{Acknowledgements}
 I would like to thank Professor Martyn. G Boutelle for allowing me to pursue this project that has greatly diversified my skill set, and for guiding me through this project. I would also like to thank Dr. Michelle Rogers for helping me navigate through LabChart and understand the data. I would like to thank Aidan Wickham for providing me with details about his PCB, which this project is based on. I would also like to thank Georgios Zafeiropoulos and Konstantinos Petkos for guiding me through the best methods to validate and test my prototype. 
@@ -42,6 +44,7 @@ Finally, I would like to thank my parents for believing in me more than I could 
 \newpage
 
 \appendix
+
 \section{Appendix: Project Code}
 \label{appendix: a}
 \begin{itemize}
